Changelog
=========

4.6.1 (unreleased)
------------------

- Hide empty additional subtitles. #SCR-344


4.6.0 (2019-09-26)
------------------

- Multipart Titles: Show title and subtitle separately in metadata box. #FLOW-559
- Multipart Titles: Removed field from rj type. #FLOW-559
- Zotero Export: Include works author in title field and use review author for
  author field. #FLOW-651
- External Fulltext: Fixed setting on Volume level. #FLOW-741
- OPAC search: Handle PPN. #FLOW-650
- New license field that supports translation (via referencing a Page). #FLOW-443
- Added new review types. #FLOW-649


4.5.0 (2019-06-05)
------------------

- Review view: Provide titles for accordion boxes and contained links so that
  zotero metadata string is not visible. #FLOW-444
- Support for multipart titles. #FLOW-520


4.4.2 (2018-12-12)
------------------

- Don't show "downloaded via" for reviews that use an external full text.
  #REC-984
- Support for adjusted CSS in separate accordion items on review view.
  #REC-984
- URL fields are no longer prepended with "http://". #REC-994


4.4.1 (2018-05-25)
------------------

- Redirect to the correct portal. Refs #16548


4.4.0 (2018-03-05)
------------------

- Metadata accordion: SVGs to replace GIFs. Refs #16175
  [reinhardt]
- Review view: Only show commenting button if commenting is enabled.
  Refs #16221
  [reinhardt]
- Licence can be entered on Volume, Issue and Review as well as on Publication.
  Licence text is treated as HTML.
  Refs #16194
  [reinhardt]
- Allow hiding URL in citation rules box. Also hide URL if external full text
  is used. Refs #16234
  [reinhardt]


4.3.2 (2018-01-18)
------------------

- Replaced Twitter button with new social media buttons. Refs #16159
  [reinhardt]


4.3.1 (2017-11-16)
------------------

- Review view: Don't break if certain attributes are missing (as with
  presentations). Refs #15982
  [reinhardt]


4.3.0 (2017-09-21)
------------------
