@@ -16,9 +16,9 @@ from recensio.contenttypes.content.review import get_formatted_names
 from recensio.contenttypes.content.schemata import ExhibitionSchema
 from recensio.contenttypes.content.schemata import LicenceSchema
 from recensio.contenttypes.content.schemata import PageStartEndInPDFSchema
-from recensio.contenttypes.content.schemata import (
-    PageStartEndOfReviewInJournalSchema)
+from recensio.contenttypes.content.schemata import PageStartEndOfReviewInJournalSchema
 from recensio.contenttypes.content.schemata import ReviewSchema
+from recensio.contenttypes.content.schemata import URLInCitationSchema
 from recensio.contenttypes.content.schemata import finalize_recensio_schema
 from recensio.contenttypes.interfaces import IReviewExhibition
 from recensio.theme.browser.views import editorTypes
@@ -30,6 +30,7 @@ ReviewExhibitionSchema = (
     + PageStartEndInPDFSchema.copy()
     + PageStartEndOfReviewInJournalSchema.copy()
     + ReviewSchema.copy()
+    + URLInCitationSchema.copy()
     + LicenceSchema.copy()
 )
 
