@@ -19,9 +19,9 @@ from recensio.contenttypes.content.schemata import EditorialSchema
 from recensio.contenttypes.content.schemata import LicenceSchema
 from recensio.contenttypes.content.schemata import PagecountSchema
 from recensio.contenttypes.content.schemata import PageStartEndInPDFSchema
-from recensio.contenttypes.content.schemata import (
-    PageStartEndOfReviewInJournalSchema)
+from recensio.contenttypes.content.schemata import PageStartEndOfReviewInJournalSchema
 from recensio.contenttypes.content.schemata import ReviewSchema
+from recensio.contenttypes.content.schemata import URLInCitationSchema
 from recensio.contenttypes.content.schemata import SerialSchema
 from recensio.contenttypes.content.schemata import finalize_recensio_schema
 from recensio.contenttypes.interfaces import IReviewMonograph
@@ -55,6 +55,7 @@ ReviewMonographSchema = (
     + PageStartEndOfReviewInJournalSchema.copy()
     + PagecountSchema.copy()
     + ReviewSchema.copy()
+    + URLInCitationSchema.copy()
     + SerialSchema.copy()
     + LicenceSchema.copy()
 )
