@@ -420,6 +420,11 @@ ReviewSchema = atapi.Schema(
                 ),
             ),
         ),
+    )
+)
+
+URLInCitationSchema = atapi.Schema(
+    (
         atapi.BooleanField(
             "URLShownInCitationNote",
             schemata="review",
@@ -435,7 +440,10 @@ ReviewSchema = atapi.Schema(
                     u"description_is_url_shown_in_citation_note",
                     default=(
                         u'Show the URL of the review in the "Citation '
-                        'rules" box. This has no effect if an external full '
+                        'rules" box. This field is ignored if the setting is '
+                        "already deactivated on a superior level "
+                        "(publication, volume, issue). In addition, this "
+                        "setting has no effect if an external full "
                         "text is used for the review, in which case the URL "
                         "is always hidden. Note that this setting does not "
                         "affect the actual citation string nor the display "
