@@ -5,6 +5,7 @@ Changelog
 ------------------
 
 - Hide empty additional subtitles. #SCR-344
+- "Show URL in citation rules box" is also available on publications, volumes and issues. #SCR-341
 
 
 4.6.0 (2019-09-26)
